[build-system]
requires = [
    "setuptools >= 42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "amulet_base"
authors = [
    {name = "James Clare"},
]
description = "The project root for all Amulet libraries."
version = "1.0.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
